PharmaDemo/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Grouped_Image_Preview__c</fullName>
        <formula>IMAGE( Grouped_Image__c ,  Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grouped Image Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouped_Image__c</fullName>
        <label>Grouped Image</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image1__c</fullName>
        <formula>IMAGE( Image_URL__c, &quot;Image&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_Preview__c</fullName>
        <formula>IMAGE( Image__c ,  Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image_URL__c</fullName>
        <label>Image URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <label>Product Family</label>
        <picklist>
            <picklistValues>
                <fullName>Mouthcare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cold &amp; Flu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pain Relief</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allergy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smoking Cessation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weight Loss</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Show_in_Planogram__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show in Planogram</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Promotional Material</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sample</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <listViews>
        <fullName>Planogram</fullName>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>PRODUCT2.RECORD_TYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>equals</operation>
            <value>Aspirin,Paracetamol,Ibuprofen</value>
        </filters>
        <label>Planogram</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Product</fullName>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>Product</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Planogram_Product</fullName>
        <active>true</active>
        <label>Planogram Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Product</fullName>
        <active>true</active>
        <label>Standard Product</label>
    </recordTypes>
</CustomObject>